Fixed text wrapping of modal popup

--- a/frontend/src/assets/css/modal.scss
+++ b/frontend/src/assets/css/modal.scss
@@ -1,9 +1,12 @@
+#mod-list{
+  position: absolute;
+}
 
 .modal.left .modal-dialog,
 .modal.right .modal-dialog {
-  position: fixed;
+  position: absolute;
   margin: auto;
-  max-width: calc(100vw - 700px);
+  width: 30%;
   height: 100%;
   -webkit-transform: translate3d(0%, 0, 0);
   -ms-transform: translate3d(0%, 0, 0);
